# Video-Repurposing

./: README.md  package-lock.json  package.json
backend/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  inspect_db.py  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/routes/: __init__.py  content.py
backend/app/core/: config.py  database.py
backend/app/models/: __init__.py  content.py  user.py
backend/app/schemas/: __init__.py  content.py
backend/app/services/: __init__.py  ai_service.py  publishing_service.py  scheduling_service.py  transcript_service.py  whisper_service.py  youtube.py  youtube_metadata_service.py
backend/app/services/ai/: base.py  factory.py  gemini_provider.py  metadata_pipeline.py  mock_provider.py  openai_provider.py  prompts.py
backend/app/workers/: __init__.py  celery_app.py  content_processor.py  tasks.py
backend/scripts/: test_flow.py
frontend/: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/calendar/: page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/publish/: page.tsx
frontend/app/review/: page.tsx
frontend/components/ui/: Badge.tsx  Button.tsx  Input.tsx  Select.tsx  Switch.tsx  Textarea.tsx
frontend/lib/: api.ts
