[project]
name = "video-repurposing-backend"
version = "0.1.0"
description = "Backend for Video Repurposing Service"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.109.2",
    "uvicorn[standard]==0.27.1",
    "pydantic-settings==2.2.1",
    "python-dotenv==1.0.1",
    "sqlalchemy==2.0.27",
    "asyncpg==0.29.0",
    "celery[redis]==5.3.6",
    "openai==1.12.0",
    "requests==2.31.0",
]

[tool.uv]
dev-dependencies = []
